fix fonts size on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,14 @@ input[type="radio"] {
   font-size: 1.7rem;
 }
 
-/* @media screen and (max-width : 520px) {
-  .container {
-    margin-right: 10px;
-  } */
+  @media only screen
+    and (max-device-width: 450px)
+    and (-webkit-min-device-pixel-ratio: 3) {
+      h1 {
+        font-size: 100px;
+      }
+
+      h3 {
+        font-size: 40rem;
+      }
+  }
